styles.css
/* ... */
#home {
    background-color: var(--background-color);
    background-position: center;
    background-attachment: fixed;
    background-repeat: no-repeat;
    background-clip: padding-box;
    position: relative;
    z-index: 0;
    text-align: center;
    background-size: cover;
}

#home::before {
    content: '';
    position: absolute;
    inset: 0;
    background-color: var(--background-color);
    z-index: -1;
    transition: opacity var(--transition-duration-longer) ease;
}

#home.loaded::before {
    opacity: 0.4;
}

/* .home-container, */
/* .teachers-container,
.pricing-container,
.calendar-container,
.qa-container,
.contacts-container {
    min-height: 60vh;
} */


.home-container {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
    margin-bottom: 8rem;
    flex-grow: 2;
}

.home-container p:first-of-type {
    font-size: 2rem;
    background: var(--linear-gradient-text-primary);
    padding: 0.5rem;
    /* Push this paragraph to the top */
}

.home-container p:last-of-type {
    /* margin-top: 2rem; */
    font-size: 1.2rem;
    background: var(--linear-gradient-text-primary);
    padding: 0.5rem;
    font-style: italic;
    /* margin-bottom: 10rem; */
}


.floating-contact-button {
    position: fixed;
    bottom: 2rem;
    /* left: calc(20vw + 2rem); */
    /* left: calc((100vw - var(--viewport-width-desktop))/2);
     */
    left: 12%;
    font-size: 1rem;
    padding: 0.5rem;
    z-index: 80;
    /* Ensure it stays on top */
    cursor: pointer;
    display: flex;
    align-items: center;
    justify-content: space-around;
    color: var(--text-color);
    /* Vertically align items */
    /* color: red; */
    background-color: var(--accent-color);
    border-radius: var(--border-radius);
    border: none;
    /* overflow: hidden; */
    min-width: 120px;
}

.contact-text {
    /* font-size: 1rem; */
    white-space: nowrap;
    color: black;
    font-weight: bold;
}

.contact-text-short {
    color: black;
    font-weight: bold;
    display: none;
}

.contact-icon {
    height: 1rem;
    width: auto;
    margin-left: 0.1rem;
    /* margin-left: 0.5rem; */
    transition: transform var(--transition-duration) ease;
}

.contact-menu-container {
    position: absolute;
    bottom: 110%;
    /* Align with the button's bottom */
    left: 0;
    width: 100%;
    overflow: hidden;
    pointer-events: none;
}

.contact-menu {
    list-style: none;
    padding: 0;
    margin: 0;
}

.contact-menu li {
    white-space: nowrap;
    margin-top: 0.2rem;
}

.contact-menu a {
    text-decoration: none;
    color: var(--text-color);
    display: flex;
    align-items: center;
    background-color: var(--primary-color-dark);
    border-radius: var(--border-radius);
    height: 2.5rem;
    padding-inline: 0.5rem;
    opacity: 0;
    transform: translateY(300%);
    transition: transform 0.15s ease-out, opacity 0.15s ease-out;
}


.contact-menu a:hover {
    background-color: var(--primary-color-light);
}

.contact-menu img {
    height: 1.5rem;
    width: auto;
    /* padding: 0.2rem; */
    margin-right: 0.5rem;
}


/* Open state styles */
.floating-contact-button.open .contact-icon {
    transform: rotate(180deg) translateY(-0.1rem);
}

.floating-contact-button.open .contact-menu-container {
    pointer-events: auto;
}

.floating-contact-button.open .contact-menu a {
    opacity: 1;
    transform: translateY(0);
}

/* Staggered animation with CSS only */
.floating-contact-button.open .contact-menu li:nth-child(1) a {
    transition-delay: 0.1s;

}

.floating-contact-button.open .contact-menu li:nth-child(2) a {
    transition-delay: 0.05s;
}

.floating-contact-button.open .contact-menu li:nth-child(3) a {
    transition-delay: 0s;
}

.spacer {
    flex-grow: 1;
}

.teachers-container {
    display: flex;
    align-items: flex-start;
    justify-content: space-around;
    border-radius: var(--border-radius);
    flex-wrap: wrap;
    gap: 2rem;
}

.teachers-container img {
    border-radius: 50%;
    /* width: 300px;
    height: auto; */
}

.teacher {
    display: flex;
    flex-direction: column;
    align-items: flex-end;
    justify-content: flex-end;
    border-radius: var(--border-radius);
    box-shadow: var(--box-shadow-primary);
    padding: 1rem;
    gap: 1rem;
    flex-basis: 350px;
    background-color: var(--background-color);
}



.teacher-info-1 p:first-of-type {
    color: var(--primary-color-light);
    font-style: italic;
}

.calendar-container {
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    /* align-items: stretch; */
    gap: 2rem;
    flex-grow: 4;
}

.calendar-cards {
    display: flex;
    flex-wrap: wrap;
    gap: 2rem;
    justify-content: space-evenly;
}


/* Day Card */
.calendar-card {
    min-width: 250px;
    display: flex;
    flex-direction: column;
    gap: 1rem;
    background-color: var(--background-color);
    border-radius: var(--border-radius);
    box-shadow: var(--box-shadow-primary);
    padding: 1.5rem;
    flex-basis: 25%;
    /* flex: 1 0 15rem; */
    /* flex-basis: 15%; */
    /* flex-shrink: 0; */
    /* flex-grow: 1; */
    color: var(--text-color);
    /* flex-grow: 1; */
    /* Adjust the flex-basis as needed */

}

.day-heading {
    text-align: center;
    /* color: var(--primary-color); */
    /* margin-bottom: 0.5rem; */
    /* font-size: 1.2em; */
}

.location-group {
    display: flex;
    flex-direction: column;
    gap: 0.5rem;
    /* box-shadow: var(--box-shadow-navbar); */
}

.location-heading {
    /* font-size: 1em; */
    color: var(--text-color-secondary);
    border-bottom: solid 0.2rem var(--primary-color-dark);
    text-align: right;
    white-space: nowrap;
}

.teacher-name {
    /* font-size: small; */
    color: var(--text-color-secondary);
    /* margin-bottom: 0.3rem; */
    text-align: right;
}
/* ... */

